Ran into problem with serving static files on my Heroku app. I created a new static directory within my parent directory housing my main .py program and threw all my static files in there. I then changed my server_static function in my main program to take in an argument of a filename instead of a file path. Now how it should work is that when my .tpl file gets served, the href link should trigger my server_static function since the href is essentially routing to '/static/<filename>'. The server_static function under the route should trigger, returning a static_file helper function that takes in an argument of a filename and a root (the root tells it where to look, in this case it's going to be './static'). Ideally, if I go back and change all of my hrefs to this static folder this should hopefully fix the problem I'm having serving static files on Heroku. I'm testing this initially by just changing the href for the frontpage.tpl. EDIT: This worked LET'S GO. Only problem is, the wrong font is being displayed. My next commit will be fixing the font for the frontpage.tpl.

--- a/static/frontpage_style.css
+++ b/static/frontpage_style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: rapidfinger101;
-    src: url("RapidFinger101-W9RV.ttf")
+    src: url("./static/RapidFinger101-W9RV.ttf")
 }
 /* Source: https://www.fonts101.com/fonts/view/Fancy/73620/Rapid_Finger_101 */
 
